--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,29 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
+    <!-- <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="237"
+      height="217"
+      viewBox="0 0 237 217"
+      fill="none"
+    >
+      <path
+        d="M2 108.394L108.394 2L214.408 108.394L108.394 214.789L2 108.394Z"
+        fill="#936F01"
+        stroke="#936F01"
+        stroke-width="2"
+      />
+      <path
+        d="M22.5924 108.394L128.987 2L235 108.394L128.987 214.789L22.5924 108.394Z"
+        stroke="#936F01"
+        stroke-width="2"
+      />
+    </svg> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +48,35 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
+
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="237"
+      height="217"
+      viewBox="0 0 237 217"
+      fill="none"
+    >
+      <path
+        d="M2 108.394L108.394 2L214.408 108.394L108.394 214.789L2 108.394Z"
+        fill="#936F01"
+        stroke="#936F01"
+        stroke-width="2"
+      />
+      <path
+        d="M22.5924 108.394L128.987 2L235 108.394L128.987 214.789L22.5924 108.394Z"
+        stroke="#936F01"
+        stroke-width="2"
+      />
+    </svg> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
